// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as expected 1`] = `
<View>
  <SimpleCard>
    <Text>
      Default card A
    </Text>
  </SimpleCard>
  <SimpleCard>
    <Text>
      Default card B
    </Text>
  </SimpleCard>
</View>
`;

exports[`renders as expected with onPress callback 1`] = `
<View>
  <SimpleCard
    onPress={[Function]}
  >
    <Text>
      Clickable card
    </Text>
  </SimpleCard>
  <SimpleCard
    onPress={[Function]}
  >
    <Text>
      Clickable card
    </Text>
  </SimpleCard>
</View>
`;
